# objectiv-analytics

./: .dockerignore  .env  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yaml
analysis/objectiv_bach/: .gitignore  CONTRIBUTING.md  Makefile  README.md  mypy.ini  requirements.txt  setup.cfg
analysis/objectiv_bach/objectiv_bach/: __init__.py  run-sankey.py  sankey_dash.py  util.py
analysis/objectiv_bach/objectiv_bach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analysis/objectiv_bach/objectiv_bach/series/: __init__.py  series_objectiv.py
analysis/objectiv_bach/objectiv_bach/stack/: basic_features.py  extracted_contexts.py  feature_table.py  hashed_features.py  sessionized_data.py  util.py
analysis/objectiv_bach/stack/: basic_features.py  extracted_contexts.py  sessionized_data.py
bach/: .gitignore  BigQuery - List & Dicts.ipynb  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pytest.ini  requirements-bigquery.txt  requirements-dev.txt  requirements.txt  run-sankey.py  sankey-in-nb-demo.ipynb  sankey_dash.py  setup.cfg
bach/bach/: __init__.py  append.py  concat.py  databases.py  dataframe.py  describe.py  dialect_bq.py  display_formats.py  expression.py  from_database.py  from_pandas.py  indexing.py  merge.py  partitioning.py  plotting.py  quantile.py  sample.py  savepoints.py  sql_model.py  test_plot.ipynb  types.py  types_bq.py  utils.py
bach/bach/operations/: concat.py  cut.py  describe.py  value_counts.py
bach/bach/preprocessing/: scalers.py
bach/bach/series/: __init__.py  series.py  series_array.py  series_boolean.py  series_datetime.py  series_dict.py  series_json.py  series_list.py  series_multi_level.py  series_numeric.py  series_objectiv.py  series_string.py  series_tuple.py  series_uuid.py
bach/docs/: .gitignore  Makefile  README.md  generate.py  generate_docs.py  package.json  requirements.txt  sphinx2docusaurus.js
bach/docs/source/: DataFrame.rst  Objectiv.rst  Series.rst  bach.rst  bach_basics.rst  bach_core_concepts.rst  bach_examples.rst  bach_reference.rst  bach_reference_dataframe.rst  bach_reference_dataframe_by_function.rst  bach_reference_series.rst  bach_reference_series_by_function.rst  bach_whatisbach.rst  conf.py  core_concepts.rst  dataframe.rst  example_notebooks.rst  examples.rst  feature_engineering.rst  feature_importance.rst  getting_started.rst  index.rst  intro.rst  machine_learning.rst  modelhub_api_reference.rst  modelhub_basics.rst  models.rst  models_aggregation.rst  models_mapping.rst  objectiv_examples.rst  open_taxonomy.rst  product_analytics.rst  reference.rst  series.rst  user_intent.rst  website_analytics.rst
bach/docs/source/_ext/: linkcode.py  requirements.txt  sphinx_docusaurus_builder.py
bach/docs/source/_templates/: layout.html
bach/docs/source/api/: buhtuh.expression.rst  buhtuh.json.rst  sql_models.cli_util.rst  sql_models.util.rst
bach/docs/source/bach/: core-concepts.rst  examples.rst  index.rst  what-is-bach.rst
bach/docs/source/example-notebooks/: feature-engineering.rst  index.rst  machine-learning.rst  modelhub-basics.rst  open-taxonomy.rst  product-analytics.rst  user-intent.rst
bach/docs/source/modelhub-api-reference/: index.rst
bach/docs/source/models/: index.rst
bach/docs/source/open-model-hub/: index.rst  version-check.rst
bach/docs/to_move/: feature_engineering.rst  intro.rst  machine_learning.rst
bach/docs/to_move/modelhub_api_reference/: modelhub.Aggregate.frequency.rst  modelhub.Aggregate.unique_sessions.rst  modelhub.Aggregate.unique_users.rst  modelhub.Map.is_conversion_event.rst  modelhub.Map.is_first_session.rst  modelhub.Map.pre_conversion_hit_number.rst
bach/sql_models/: README.md  cli_util.py  constants.py  graph_operations.py  model.py  sql_generator.py  util.py
bach/tests/: conftest.py
bach/tests/big_query/: __init__.py  bq_test.py  test_bq_basic.py  test_df.py
bach/tests/functional/bach/: test_bq.py  test_bt_custom_types.py  test_cut.py  test_data_and_utils.py  test_df.py  test_df_append.py  test_df_astype.py  test_df_describe.py  test_df_drop_duplicates.py  test_df_dropna.py  test_df_fillna.py  test_df_from.py  test_df_from_dataframe.py  test_df_from_pandas.py  test_df_get_dummies.py  test_df_getitem.py  test_df_groupby.py  test_df_indexing.py  test_df_materialize.py  test_df_merge.py  (+46 more)
bach/tests/unit/: test_series_array.py
backend/: .dockerignore  CONFIGURATION.md  CONTRIBUTING.md  Makefile  README.md  configuration.md  mypy.ini  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg
backend/docker/: Dockerfile  collector.sh  entry_point.sh  gunicorn.conf.py  worker.sh
backend/objectiv_backend/: app.py  create_tables.sql
backend/objectiv_backend/common/: config.py  db.py  enrich.py  event_utils.py  types.py
backend/objectiv_backend/end_points/: collector.py  common.py  extra_output.py  schema.py
backend/objectiv_backend/schema/: .gitignore  base_schema.json  context_schemas.py  event_list.json5  event_schemas.py  generate_classes.py  generate_json_schema.py  hydrate_events.py  schema.py  schema_utils.py  validate_events.py
backend/objectiv_backend/snowplow/: README.MD  snowplow_helper.py
backend/objectiv_backend/workers/: pg_queues.py  pg_storage.py  util.py  worker_enrichment.py  worker_entry.py  worker_finalize.py  workers.py
backend/tests/collector/: test_collector.py  test_snowplow.py
backend/tests/schema/: test_collector.py  test_event_schema.py  test_schema.py
modelhub/: Makefile  README.md  mypy.ini  requirements-dev.txt  requirements.txt  setup.cfg
modelhub/modelhub/: __init__.py  aggregate.py  map.py  metrics.py  modelhub.py
modelhub/modelhub/models/: __init__.py  feature_importance.py  logistic_regression.py
modelhub/modelhub/series/: series_objectiv.py
modelhub/modelhub/stack/: __init__.py  util.py
taps/tap-optimize/: README.md  optimize-config.json  pyproject.toml  tap-optimize.sh
taps/tap-optimize/tap_optimize/: client.py  streams.py  tap.py
(+1661 files in other folders)
