[metadata]
name = bach
version = attr: bachq.__version__
author = Objectiv
author_email = thijs@objectiv.io
description = Library offering a Pandas compatible API that directly interacts with a SQL backend.
long_description = file: README.md
long_description_content_type = text/markdown
# TODO
#url = https://github.com/pypa/sampleproject
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
#    License :: OSI Approved :: TODO
    Operating System :: OS Independent
# TODO: set to production when ready
    Development Status :: 4 - Beta

[options]
install_requires =
    psycopg2-binary
    sqlalchemy
    pandas
    sqlparse
python_requires = >=3.7
packages = find:
include_package_data = True
[options.packages.find]
where = .
exclude = tests, tests.*


[pycodestyle]
count = True
max-line-length = 110
statistics = True
