[metadata]
name = bach
version = attr: bach.__version__
author = Objectiv
author_email = thijs@objectiv.io
description = Pandas-like DataFrames backed by SQL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/objectiv/objectiv-analytics/
project_urls =
    Documentation = https://objectiv.io/docs
    Bug Tracker = https://github.com/objectiv/objectiv-analytics/issues
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
# TODO: set to production when ready
    Development Status :: 4 - Beta

[options]
install_requires =
    psycopg2-binary
    sqlalchemy
    pandas
    sqlparse
python_requires = >=3.7
packages = find:
include_package_data = True
[options.packages.find]
where = .
exclude = tests, tests.*


[pycodestyle]
count = True
max-line-length = 110
statistics = True
