[metadata]
name = objectiv-modelhub
version = attr: modelhub.__version__
author = Objectiv B.V.
author_email = hi@objectiv.io
description = The open model hub is a growing collection of data models that you can take, combine and run for product analysis and exploration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/objectiv/objectiv-analytics/
project_urls =
    Documentation = https://objectiv.io/docs
    Bug Tracker = https://github.com/objectiv/objectiv-analytics/issues
license = Apache License 2.0
license_files =
   LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
# TODO: set to production when ready
    Development Status :: 4 - Beta

[options]
install_requires =
    objectiv-bach ==0.0.6
    requests
python_requires = >=3.7
packages = find:
include_package_data = True
[options.packages.find]
where = .
exclude = tests, tests.*

[pycodestyle]
count = True
max-line-length = 110
statistics = True
