[tool.poetry]
name = "tap-optimize"
version = "0.0.1"
description = "`tap-optimize` is Singer tap for Optimize, built with the Singer SDK."
authors = ["MN"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
requests = "^2.25.1"
singer-sdk = "^0.2.0"
google-api-python-client = "^2.6.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-optimize = 'tap_optimize.tap:TapOptimize.cli'
